# kong

./: .cursorignore  .env.backup  .env.vars  .env_glad_staging_local  .env_ic  .env_local  .env_prod  .env_staging  .env_staging_fe  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  FRONTEND_ANALYSIS.md  README.md  SYSTEM_PROMPT_AUTH_USAGE.md  canister_ids.all.json  canister_ids.json  canister_ids_local.json  canister_ids_prod.json  canister_ids_staging.json  debug_signature.sh  dfx.json  dfx_local.json  dfx_prod.json  dfx_staging.json  generate_actor_files.sh  kong_backend.did  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  solana_port_guide.md  svelte.config.js  test  tsconfig.json  vitest.config.ts
rsKong/: Cargo.toml
rsKong/src/: agent.rs  main.rs
rsKong/src/kong_backend/: mod.rs
rsKong/src/kong_backend/add_liquidity/: add_liquidity_args.rs  add_liquidity_reply.rs
rsKong/src/kong_backend/canister/: block_id_reply.rs  mod.rs
rsKong/src/kong_backend/claim/: claim_reply.rs
rsKong/src/kong_backend/helpers/: nat_helpers.rs
rsKong/src/kong_backend/pools/: pools.rs  pools_reply.rs
rsKong/src/kong_backend/remove_liquidity/: mod.rs  remove_liquidity_args.rs  remove_liquidity_reply.rs
rsKong/src/kong_backend/requests/: mod.rs  requests_reply.rs
rsKong/src/kong_backend/swap/: mod.rs  swap.rs  swap_args.rs  swap_reply.rs  swap_transfer.rs
rsKong/src/kong_backend/swap_amounts/: swap_amounts.rs  swap_amounts_reply.rs
rsKong/src/kong_backend/tokens/: address.rs  chain.rs  decimals.rs  fee.rs  ic_reply.rs  lp_reply.rs  mod.rs  symbol.rs  tokens.rs
rsKong/src/kong_faucet/: mod.rs
sdk/rsKong/: Cargo.toml
sdk/rsKong/src/: agent.rs  swap.rs
src/comments/: Cargo.toml
src/comments/src/: admin.rs  authentication.rs  icrc21_helpers.rs  lib.rs  queries.rs  state.rs  types.rs  updates.rs
src/ic_siws/: CHANGELOG.md  Cargo.toml  README.md
src/ic_siws/src/: delegation.rs  init.rs  lib.rs  login.rs  settings.rs  siws.rs  solana.rs
src/ic_siws_provider/: CHANGELOG.md  Cargo.toml  Makefile  README.md  ic_siws_provider.did
src/ic_siws_provider/src/: lib.rs
src/ic_siws_provider/src/service/: get_address.rs  get_caller_address.rs  get_principal.rs  init_upgrade.rs  mod.rs  siws_get_delegation.rs  siws_login.rs  siws_prepare_login.rs
src/ic_siws_provider/tests/: common.rs  integration_tests.rs
src/icrc3-main/: Cargo.toml  README.md
src/icrc3-main/src/: agent.rs  icrc1.rs  icrc3.rs  identity.rs  main.rs
src/icrc3-main/tests/: icp_test.rs  icrc1_tests.rs
src/icrc3-main/tests/common/: icp_ledger.rs  icrc1_ledger.rs
src/kong_admin/: Cargo.toml  DOCKER_DEPLOYMENT.md  DOCKER_PUSH.md  DO_APP_PLATFORM.md  Dockerfile.kong_admin  ENV_MIGRATION.md  README.md  healthcheck.sh  push-to-do.sh  settings.json.example
src/kong_admin/.do/: app.yaml
src/kong_admin/sql/: lp_tokens.sql  postgresql.sh
src/kong_admin/sql/scripts/: admin.sql  claims.sql  get_pool.sql  get_swaps.sql  get_usd_amount.sql  init_database.sql  integrity_checks.sql  nat.sql  txs.sql  (+8 more)
src/kong_admin/src/: README.md  agent.rs  claims.rs  db_updates.rs  kong_backend.rs  kong_data.rs  kong_settings.rs  kong_update.rs  lib.rs  lp_token_ledger.rs  lp_tokens.rs  main.rs  nat_helpers.rs  pools.rs  requests.rs  settings.rs  tokens.rs  transfers.rs  txs.rs  updates.rs  users.rs
src/kong_backend/: Cargo.toml  kong_backend.did
src/kong_backend/src/: canister.rs  canister_test.rs  icrc21_helpers.rs  kong_backend.rs  lib.rs  mod.rs  stable_memory.rs
src/kong_backend/tests/: setup_test_tokens.rs  test_add_pool.rs  test_add_token.rs  test_adding_liquidity.rs  test_adding_tokens.rs  test_async_swaps.rs  test_canister.rs  test_controllers.rs  test_creating_pool.rs  test_environment_setup.rs  test_full_dex_flow.rs  test_icrc1.rs  test_icrc1_verify_direct_call.rs  test_kong_backend.rs  test_ksicp_ledger.rs  test_kskong_ledger.rs  test_ksusdt_ledger.rs  test_minting_and_balances.rs  test_performing_swaps.rs  test_pool_builder.rs  test_reverse_swaps.rs  test_swap.rs  test_token_transfers.rs  test_tokens.rs  test_verify_icrc3.rs
src/kong_data/: Cargo.toml  kong_data.did
src/kong_data/src/: canister.rs  claims.rs  guards.rs  kong_settings.rs  lib.rs  lp_token_ledger.rs  math_helpers.rs  messages.rs  pools.rs  requests.rs  stable_memory.rs  status.rs  tokens.rs  transfers.rs  txs.rs  user_map.rs  users.rs
src/kong_faucet/: Cargo.toml
src/kong_faucet/src/: canister.rs  claim.rs  lib.rs  stable_memory.rs
src/kong_lib/: Cargo.toml
src/kong_lib/src/: lib.rs
src/miner/: Cargo.toml
src/miner/src/: block_miner.rs  lib.rs
src/miner/tests/: integration_test.rs  mining_flow_test.rs  mod.rs
src/prediction_markets_backend/: Cargo.toml  README.md  prediction_markets_backend.did
src/prediction_markets_backend/src/: authentication.rs  canister.rs  constants.rs  delegation.rs  failed_transaction.rs  lib.rs  nat.rs  queries.rs  stable_memory.rs  storable_vec.rs  storage.rs  transaction_recovery.rs  types.rs
src/prediction_markets_backend/tests/: common.rs  integration_tests.rs  resolution_debug_demo.rs  run_pocketic_tests.sh
src/sdk/rsKong/: Cargo.toml  README.md
src/token_backend/: Cargo.toml  build.rs  index.d.ts  index.js  readme.md  token_backend.did  token_backend.did.d.ts  token_backend.did.js
src/token_backend/frontend/: token_backend.did  token_backend.did.d.ts  token_backend.did.js
src/token_backend/frontend-svelte/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js
src/token_backend/src/: block_templates.rs  compile.sh  http.rs  lib.rs  memory.rs  mining.rs  security.rs  standards.rs  start_token.rs  statistics.rs  submit_solution.rs  token_backend.did  transfer_to_miner.rs  types.rs
src/token_backend/wasm/: token_backend.did  token_backend.wasm
src/transfer_lib/: Cargo.toml  README.MD
src/transfer_lib/src/: canister.rs  get_address.rs  lib.rs  memory_manager.rs  receive.rs  send.rs  stable_memory.rs  stable_transfer_settings.rs  transfer_map.rs  verify_transfer.rs
(+2715 files in other folders)
