[workspace]
members = [
    "src/kong_lib",
    "src/kong_backend",
    "src/kong_data",
    "src/kong_faucet",
    "src/kong_admin",
    "src/sdk/rsKong",
    "src/prediction_markets_backend",
    "src/miner",
    "src/token_backend",
    "src/trollbox",
]
resolver = "2"

[workspace.dependencies]
# ICP & General Dependencies
candid = "0.10.10"
candid_derive = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11.2"
bincode = "1.3.3"
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11.0"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6"
ic-certification = "3.0.2"
ic-certified-map = "0.4.0"
ic-ledger-types = "0.14.0"
num-traits = "0.2"
num-bigint = "0.4.3"
hex = "0.4.3"
sha2 = "0.10.7"
base64 = "0.22.1"
crc32fast = "1.3"
icrc-ledger-types = "0.1.3"
async-trait = "0.1.74"
thiserror = "2.0.11"
ciborium = "0.2.1"
lazy_static = "1.4.0"
proptest = "1.3"
lru = "0.13.0"
ic-stable-memory = "0.4.4"
bs58 = "0.5"
lz4 = "1.28.1"
rand = "0.9.0"


[profile.release]
lto = true
opt-level = 'z'