[workspace]
members = [
    "src/kong_lib",
    "src/kong_backend",
    "src/kong_data",
    "src/kong_faucet",
    "src/kong_admin",
    "src/sdk/rsKong",
    "src/prediction_markets_backend",
    "src/trollbox",
    "src/ic_siws_provider",
    "src/ic_siws"
]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'