[package]
name = "kong_sdk"
version = "0.0.3"
edition = "2021"
description = "Kong Swap SDK"

[dependencies]
anyhow = "1.0.86"
candid = "0.10.10"
ic-agent = "0.37.1"
icrc-ledger-types = "0.1.6"
ring = "0.17.8"
tokio = { version = "1", features = ["full"] }
serde = "1.0.203"
serde_json = "1.0.117"
num = "0.4.2"
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = "0.8.5"
