[package]
name = "ic_siws_provider"
version = "0.0.2"
edition = "2021"
authors = ["Kristofer Lund <kristofer@kristoferlund.se>"]
description = "Using the pre built ic_siws_provider canister is the easiest way to integrate Solana wallet authentication into an Internet Computer (ICP) application."
license = "MIT"
homepage = "https://github.com/kristoferlund/ic-siws"
repository = "https://github.com/kristoferlund/ic-siws"
keywords = ["solana", "wallet", "internet-computer", "authentication", "siws"]
categories = ["authentication", "cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic_siws = { path = "../ic_siws" }
ic-stable-structures = "0.6.0"
ic-certified-map = "0.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_bytes = "0.11"
num-traits = "0.2.18"

[dev-dependencies]
hex = "0.4.3"
ic-agent = "0.40.0"
pocket-ic = "7.0.0"
rand = "0.8.4"
ring = "0.16.20"
zeroize = { version = "1.3", default-features = false }
bs58 = "0.5.1"
solana-sdk = "2.2.2"
