[package]
name = "icrc3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
candid = "0.10.13"
ciborium = "0.2.2"
clap = { version = "4.5.37", features = ["derive"] }
ed25519-consensus = "2.1.0"
hex = "0.4.3"
ic-agent = "0.40.0"
ic-cdk = "0.18.0"
ic-ledger-types = "0.15.0"
icrc-ledger-types = "0.1.8"
num-traits = "0.2.19"
rand = "0.8.5"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
ic-management-canister-types = "0.3.0"
pocket-ic = "9.0.0"
