[package]
name = "kong_admin"
version = "0.0.9"
edition = "2021"

[dependencies]
kong_lib = { path = "../kong_lib" }
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
num-bigint = "0.4.0"
num-traits = "0.2.14"
postgres-types = { version = "0.2.8", features = ["derive"] }
regex = "1.11.1"
