[package]
name = "kong_admin"
version = "0.0.20"
edition = "2021"

[features]
local = []
staging = []
prod = []

[dependencies]
kong_lib = { path = "../kong_lib" }
tokio = { version = "1.40.0", features = ["full", "signal"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
num-bigint = "0.4.0"
num-traits = "0.2.14"
postgres-types = { version = "0.2.8", features = ["derive"] }
regex = "1.11.1"
candid = "0.10.10"
ic-agent = "0.39.1"
rand = "0.8.5"
ed25519-consensus = "2.1.0"
anyhow = "1.0.93"
chrono = "0.4.38"
openssl = "0.10.68"
postgres-openssl = "0.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
