[package]
name = "kong_backend"
version = "0.0.43"
edition = "2021"
description = "Kong Swap backend canister"

[lib]
name = "kong_backend"
crate-type = ["cdylib", "rlib"]

[features]
local = []
staging = []
prod = []

[dependencies]
candid = "0.10.10"
futures = "0.3.30"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk = { version = "0.17.0", features = ["transform-closure"] }
ic-cdk-timers = "0.11.0"
ic-ledger-types = "0.14.0"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6.9"
icrc-ledger-types = "0.1.6"
num = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.19"
rand = "0.8.5"
regex = "1.10.6"
serde = "1.0.210"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.128"
wildmatch = "2.4.0"
anyhow = "1.0.98"
ciborium = "0.2.2"
thiserror = "2.0.12"
bs58 = "0.5.1"
num_enum = "0.7.3"
ed25519-dalek = "2.1.1"
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"

[dev-dependencies]
ed25519-consensus = "2.1.0"
ic-agent = "0.40.0"
ic-management-canister-types = "0.3.0"
pocket-ic = "9.0.0"
once_cell = "1.19.0"
