[package]
name = "kong_backend"
version = "0.0.20"
edition = "2021"
description = "Kong Swap backend canister"

[lib]
name = "kong_backend"
crate-type = ["cdylib", "rlib"]

[features]
local = []
staging = []
prod = []

[dependencies]
kong_lib = { path = "../kong_lib" }
transfer_lib = { path = "../transfer_lib" }
candid = "0.10.20"
futures = "0.3.31"
getrandom = { version = "0.2.16", features = ["custom"] }
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2"
ic-ledger-types = "0.15.0"
ic-cdk-macros = "0.18.5"
ic-stable-structures = "0.6.9"
icrc-ledger-types = "0.1.12"
num = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
regex = "1.12.2"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_cbor = "0.11.2"
serde_json = "1.0.145"
wildmatch = "2.5.0"
itertools = "0.13.0"
anyhow = "1.0.100"
ciborium = "0.2.2"

[dev-dependencies]
ed25519-consensus = "2.1.0"
ic-agent = "0.41.0"
ic-management-canister-types = "0.3.3"
pocket-ic = "9.0.2"
once_cell = "1.21.3"
