[package]
name = "kong_faucet"
version = "0.0.19"
edition = "2021"
description = "Kong Swap faucet canister"

[lib]
name = "kong_faucet"
crate-type = ["cdylib"]

[features]
local = []
staging = []
prod = []

[dependencies]
kong_lib = { path = "../kong_lib" }
candid = "0.10.10"
futures = "0.3.30"
ic-cdk = "0.18.7"
ic-stable-structures = "0.6.9"
ic-ledger-types = "0.15.0"
icrc-ledger-types = "0.1.12"
serde = "1.0.210"
serde_json = "1.0.128"
ic-cdk-macros = "0.18.7"
