[package]
name = "kong_lib"
version = "0.0.9"
edition = "2021"

[lib]
name = "kong_lib"
crate-type = ["lib"]

[features]
prod = []

[dependencies]
candid = "0.10.10"
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11.0"
ic-ledger-types = "0.14.0"
ic-stable-structures = "0.6.6"
icrc-ledger-types = "0.1.6"
serde = "1.0.210"
serde_bytes = "0.11.15"
serde_json = "1.0.128"
