[package]
name = "kong_lib"
version = "0.0.21"
edition = "2021"

[lib]
name = "kong_lib"
crate-type = ["lib"]

[features]
local = []
staging = []
prod = []

[dependencies]
bs58 = "0.5.1"
candid = "0.10.20"
ed25519-consensus = "2.1.0"
thiserror = "2.0.17"
ic-cdk = "0.18.7"
ic-cdk-timers = "0.12.2"
ic-ledger-types = "0.15.0"
icrc-ledger-types = "0.1.12"
ic-cdk-macros = "0.18.7"
ic-stable-structures = "0.6.9"
num = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
regex = "1.12.2"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_cbor = "0.11.2"
serde_json = "1.0.145"


[dev-dependencies]
ic-agent = "0.41.0"