[package]
name = "miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
pocket-ic = "6.0.0"
tokio = { version = "1.28.1", features = ["full"] }

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
serde.workspace = true
serde_json.workspace = true
ic-stable-structures.workspace = true
sha2.workspace = true
hex.workspace = true
icrc-ledger-types.workspace = true
