[package]
name = "prediction_markets_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10"
ciborium = "0.2.0"  # CBOR serialization
num-traits = "0.2"
num-bigint = "0.4"
lazy_static = "1.4"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
icrc-ledger-types = "0.1.8"
kong_lib = { path = "../kong_lib" }

[dev-dependencies]
candid-extractor = "0.1.5"
pocket-ic = "9.0.0"
flate2 = "1.0"