[package]
name = "token_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
base64.workspace = true
sha2.workspace = true
ic-certified-map.workspace = true
serde_cbor.workspace = true
icrc-ledger-types.workspace = true
ic-stable-structures.workspace = true
lru.workspace = true
ciborium.workspace = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
